--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -24,5 +24,6 @@ jobs:
 
     - name: Build
       run: |
-        npm install
-        npx webpack
+        npm ci
+        npm run build
+        
